<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item android:title="@string/gallery">
            <menu>
                <item
                    android:id="@+id/nav_gallery_my"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_gallery_my" />
                <item
                    android:id="@+id/nav_gallery_landscape"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_gallery_landscape" />
                <item
                    android:id="@+id/nav_gallery_animal"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_gallery_cat" />
                <item
                    android:id="@+id/nav_gallery_movie"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/menu_gallery_movie" />
            </menu>
        </item>
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
